@@ -41,6 +41,7 @@ where XXXXXX is the bug number as listed below.
 269360  s390x: Fix addressing mode selection for compare-and-swap
 333051  mmap of huge pages fails due to incorrect alignment
         == 339163
+334802  valgrind does not always explain why a given option is bad
 335440  arm64: ld1 (single structure) is not implemented
 335713  arm64: unhanded instruction: prfm (immediate)
 338731  ppc: Fix testuite build for toolchains not supporting -maltivec
